<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/minion_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout_dang_nhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tai_khoan"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edt_tai_khoan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="no"
                android:contentDescription="@string/nhap_tai_khoan_cua_ban"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nhap_mat_khau_cua_ban"
                android:text="@string/mat_khau"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edt_mat_khau"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="no"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:textColor="@color/white"
            android:id="@+id/txt_thong_bao_dang_nhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_dang_nhap">


        <LinearLayout
            android:id="@+id/linear_layout_dang_ky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_quen_mat_khau">

            <Button
                android:id="@+id/btn_dang_ky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dang_ky"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_dang_nhap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dang_nhap"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>